--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,19 @@
 alembic==1.8.0
 beautifulsoup4==4.11.1
 certifi==2022.6.15
+cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.1.3
 colorama==0.4.4
+cors==1.0.1
+filelock==3.7.1
 Flask==2.1.2
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==1.0.1
+future==0.18.2
+gevent==21.12.0
 greenlet==1.1.2
 gunicorn==20.1.0
 html5lib==1.1
@@ -22,15 +27,21 @@ MarkupSafe==2.1.1
 numpy==1.22.4
 pandas==1.4.2
 psycopg2==2.9.3
+pycparser==2.21
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-dotenv==0.20.0
 pytz==2022.1
 requests==2.28.0
+requests-file==1.5.1
 six==1.16.0
 soupsieve==2.3.2.post1
 SQLAlchemy==1.4.37
+tldextract==3.3.0
 urllib3==1.26.9
 webencodings==0.5.1
 Werkzeug==2.1.2
 WTForms==3.0.1
 zipp==3.8.0
+zope.event==4.5.0
+zope.interface==5.4.0
