--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ colorama==0.4.4
 cors==1.0.1
 filelock==3.7.1
 Flask==2.1.2
+Flask-Cors==3.0.10
 Flask-Login==0.6.1
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
